--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -24,6 +24,9 @@ RUN npm install && npm cache clean --force
 # copy remaining files
 COPY --chown=node:node . .
 
+## for platform
+sudo chown -R 1000:1000 "/home/node/app/.npm"
+
 # expose port on the host
 EXPOSE $NODE_PORT
 
