--- a/onlyNodejs/docker-compose.yml
+++ b/onlyNodejs/docker-compose.yml
@@ -5,10 +5,13 @@ services:
   nodehello:
     environment:
       - NODE_ENV=development
-    image: educative1/nodehello
+    build:
+      context: ./
+      dockerfile: Dockerfile
     container_name: nodehello
     volumes:
       - ./:/home/node/app
     ports:
       - "3000:3000"
       - "8080:9229"
+    command: /bin/sh -c 'npm install && npm run debug'
